Issue #SB-18996 fix: Close icon overlapping the navigation button issue

--- a/src/app/client/src/app/modules/public/module/player/components/public-content-player/public-content-player.component.scss
+++ b/src/app/client/src/app/modules/public/module/player/components/public-content-player/public-content-player.component.scss
@@ -35,6 +35,6 @@
   .close-button {
     position: absolute;
     z-index: 100;
-    right: 16px;
-    top: 16px;
+    right: 30px;
+    top: 32px;
   }
